@@ -147,9 +147,9 @@ public:
 	void	CastGroupSpell(Mob* caster,uint16 spellid, uint32 gid);
 	void	SplitExp(uint32 exp, Mob* other);
 	uint32	GetTotalRaidDamage(Mob* other);
-	void	BalanceHP(int32 penalty, uint32 gid);
-	void	BalanceMana(int32 penalty, uint32 gid);
-	void	HealGroup(uint32 heal_amt, Mob* caster, uint32 gid);
+	void	BalanceHP(int32 penalty, uint32 gid, int32 range = 0, Mob* caster = nullptr);
+	void	BalanceMana(int32 penalty, uint32 gid,  int32 range = 0, Mob* caster = nullptr);
+	void	HealGroup(uint32 heal_amt, Mob* caster, uint32 gid, int32 range = 0);
 	void	SplitMoney(uint32 copper, uint32 silver, uint32 gold, uint32 platinum, Client *splitter = nullptr);
 	void	GroupBardPulse(Mob* caster, uint16 spellid, uint32 gid);
 
